# Chat-AI

./: .gitignore  CMakeLists.txt  README.md  build.sh
SH/: Builder.sh  Runner.sh
src/: main.cpp
